--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -1,6 +1,6 @@
 .zpony_city{
     width: 100%;
-    background: #9dd6ff;
+    // background: #9dd6ff;
     min-height: 100%;
     .zpony_nav{
         height: 50px;
