--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -5,3 +5,27 @@
 html,body, #root{
     height: 100%;
 }
+ul li{
+    padding:0;
+    margin:0;
+    list-style:none
+}
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
+.clearfix:before,
+.clearfix:after {
+    display: table;
+    content: "";    /*不用有内容也可以*/
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
