--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,11 +1,12 @@
+
+html,body, #root{
+    height: 100%;
+}
 *{
     padding: 0;
     margin: 0;
 }
-html,body, #root{
-    height: 100%;
-}
-ul li{
+ul, li{
     padding:0;
     margin:0;
     list-style:none
